# vignette

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/vignette/: ai.py  bot.py  generator.py  judge.py  prompts.py
tests/: test_ai.py  test_bot.py
