[project]
name = "vignette"
version = "0.1.0"
description = "AI-powered Telegram bot for micro-roleplay - one scene, one action"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.25",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "rich>=13.9.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio",
]
